--- a/RaiseTechTask8SecondTime.yml
+++ b/RaiseTechTask8SecondTime.yml
@@ -316,6 +316,19 @@ Resources:
       Tags:
       - Key: Name
         Value: MyEC2
+        
+  PublicDNS:
+    Description: Public DNSName of the newly created EC2 instance
+    Value:
+      Fn::GetAtt:
+      - MyEC2
+      - PublicDnsName
+  PublicIP:
+    Description: Public IP Address of the newly created EC2 instance
+    Value:
+      Fn::GetAtt:
+      - MyEC2
+      - PublicIp
 
   # ------------------------------ #
   # Target Group
