--- a/RaiseTechTask8SecondTime.yml
+++ b/RaiseTechTask8SecondTime.yml
@@ -313,6 +313,7 @@ Resources:
       SecurityGroupIds: 
       - !Ref SecurityGroupPublic
       Tenancy: "default"
+      KeyName: RaiseTech-EC2.pem
       Tags:
       - Key: Name
         Value: MyEC2
